# dotfiles

./: .bashrc  .gitconfig  .gitignore  .gitignore_global  .latexmkrc  .markdownlint-cli2.jsonc  .mcp.json  .simple-vimrc  .tmux.conf  .viminfo  .vimrc  .vimrc_old  README.md  setup.sh
.claude/: CLAUDE.md
.claude.bk/: CLAUDE.md
.vim/: .netrwhist  coc-settings.json  memos.json
bash/: .bashrc
bashrcs/Windows/: .bashrc
bashrcs/linux/: .bashrc
bashrcs/mac/: .bash_profile  .bashrc
bashrcs/wsl/: .bashrc
brew/: Brewfile  dev.Brewfile
configs/: starship.toml
configs/ccstatusline/: settings.json
configs/claude/: .mcp.json  CLAUDE.md  settings.json  statusline.extends.ts  statusline.js  statusline.sh  statusline.ts
configs/code/: extensions.json  install-extensions.sh  keybindings.json  settings.json
configs/codex/: AGENTS.md  config.toml
configs/cursor/: mcp.json
configs/gemini/: GEMINI.md  settings.json
configs/ghostty/: config
configs/lazygit/: config.yml
configs/nvim/: lazy-lock.json  lazyvim.json
configs/rmpc/: config.ron
configs/serena/: serena_config.yml
configs/skhd/: skhdrc
configs/spotify-player/: app.toml  keymap.toml
configs/superfile/: config.toml  hotkeys.toml
configs/tmux/: .tmux.conf  tmux-setup.sh  tmux-short-path.sh
configs/yabai/: yabairc
configs/yazi/: theme.toml  yazi.toml
configs/zellij/: config.kdl
configs/zsh/: .zshrc
dev/: .vimrc  .vimrc_dev1  init.vim  lvim_config.lua  posh-theme.omp.json  win-terminal-settings.json
dev/archive/: .vimrc  .vimrc_dev1  lg-config.yml  posh-theme-macOS.omp.json  posh-theme.omp.json
dev/brew/: Brewfile  setup.sh
dev/experimental-utils/imgcat/: README.md  pyproject.toml
dev/experimental-utils/imgcat/imgcat/: __init__.py  __main__.py  animation.py  cli.py  clipboard.py  discovery.py  renderer.py  viewer.py
dev/experimental-utils/imgcat/tests/: __init__.py  conftest.py  test_cli.py  test_clipboard.py  test_discovery.py  test_renderer.py  test_viewer.py
dev/experimental-utils/pdfcat/: README.md  pyproject.toml
dev/experimental-utils/pdfcat/pdfcat/: __init__.py  cli.py  renderer.py  viewer.py
dev/experimental-utils/pdfcat/tests/: __init__.py  conftest.py  test_cli.py  test_kitty.py  test_renderer.py  test_viewer.py
dev/experimental-utils/videocat/: README.md  pyproject.toml
dev/experimental-utils/videocat/tests/: __init__.py  conftest.py  test_cli.py  test_player.py  test_viewer.py
dev/experimental-utils/videocat/videocat/: __init__.py  cli.py  player.py  viewer.py
dev/experimental-utils/webcat/: README.md  pyproject.toml
dev/experimental-utils/webcat/tests/: __init__.py  conftest.py  test_cli.py  test_fetcher.py  test_parser.py  test_renderer.py  test_viewer.py
dev/experimental-utils/webcat/webcat/: __init__.py  cli.py  fetcher.py  kitty.py  parser.py  renderer.py  viewer.py
dev/ghostty/: config
dev/lib/: python-setup.sh
dev/posh/: Microsoft.PowerShell_profile.ps1  scoop-purge.ps1  scoop-upgrade.ps1  scoop_list  user_profile.ps1
dev/pwsh/: Microsoft.PowerShell_profile.ps1
dev/raycast/: raycast-config_2025-07-02-221244.rayconfig
dev/script/: build.csproj
dev/starship/: starship.toml
doc/: CHECKIMAGE.sh  InitGit.sh  UPDATE.sh  macOS-steup.sh  python-setup.sh
lib/: coc-settings.json  init.vim  jupyter-setup.sh  keybindings.json  macOS-steup.sh  parser.js  posh-theme.json  settings.json  style.less  vscode-settings.json
mpd/: mpd.conf
obsolete/: .tigrc
tmux/: .linux-tmux.conf  .macOS-tmux.conf  .tmux.conf  .wsl-tmux.conf  tmux-functions  tmux-setup.sh  tmux.conf_2_4
zsh/: .zshrc
zshrcs/: .zshrc
(+131 files in other folders)
